k8s/clusters/homelabk8s01/infrastructure/gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.homelab.local"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: homelab-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.homelab.local"
      allowedRoutes:
        namespaces:
          from: All
