k8s/clusters/homelabk8s01/infrastructure/gateway/http-redirect.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: default
spec:
  parentRefs:
    - name: homelab-gateway
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
